--- a/app/src/main/res/layout/activity_course.xml
+++ b/app/src/main/res/layout/activity_course.xml
@@ -6,8 +6,14 @@
         android:orientation="vertical">
 
         <TextView
+            android:id="@+id/title"
+            android:textSize="36sp"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="qhehqwhehqwe"/>
+            android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/description"
+            android:textSize="24dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
     </LinearLayout>
 </layout>
