--- a/app/src/main/res/layout/activity_course.xml
+++ b/app/src/main/res/layout/activity_course.xml
@@ -15,5 +15,10 @@
             android:textSize="24dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
+        <TextView
+            android:id="@+id/rating"
+            android:textSize="24dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
     </LinearLayout>
 </layout>
